[package]
name = "unipalette"
version = "0.2.0"
edition = "2018"
description = "Color macro system for unified system color themes across configuration files"
authors = [ "Andrew Palmer <andrew.pa@outlook.com>" ]

[dependencies]
clap = "3.0.0-beta.2"
anyhow = "1"
crossterm = "0.20"
palette = "0.5"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
rayon = "1"
peg = "0.7"
regex = "1.5"
lazy_static = "1.4"
