[package]
name = "unipalette"
version = "0.4.1"
edition = "2018"
description = "Color macro system for unified system color themes across configuration files"
authors = [ "Andrew Palmer <andrew.pa@outlook.com>" ]

[dependencies]
clap = { git = "https://github.com/clap-rs/clap", features=["derive", "default"] }
anyhow = "1"
crossterm = "0.20"
palette = "0.6"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
rayon = "1"
peg = "0.8"
regex = "1.5"
lazy_static = "1.4"
